--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitejs/plugin-basic-ssl": "^2.1.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "@vitest/coverage-v8": "3.2.4",
     "esbuild": "^0.25.10",
