--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tanstack/router-cli": "^1.132.19",
+    "@tanstack/router-plugin": "^1.132.21",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.18.6",
